syntax = "proto3";


option java_multiple_files = true;
option java_package = "org.spin.backend.grpc.report_engine";
option java_outer_classname = "ReportEngineService";

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// Base URL
// /report-engine/

package report_engine;

// The greeting service definition.
service ReportEngine {
	// system information
	rpc GetSystemInfo(GetSystemInfoRequest) returns (SystemInfo) {
		option (google.api.http) = {
			get: "/v1/report-engine/system-info"
		};
	}

	//	Get Report Format
	rpc GetView(GetReportRequest) returns (Report) {
		option (google.api.http) = {
			get: "/v1/report-engine/views/{print_format_id}"
		};
	}

	rpc GetReport(GetReportRequest) returns (Report) {
		option (google.api.http) = {
			get: "/v1/report-engine/reports/{report_id}"
		};
	}
	
	rpc RunExport(RunExportRequest) returns (RunExportResponse) {
		option (google.api.http) = {
			post: "/v1/report-engine/export/{report_id}/{format}"
			additional_bindings: {
				post: "/v1/report-engine/export/print-format/{print_format_id}/{format}"
			}
		};
	}
}

message GetSystemInfoRequest {
	// empty request
}
message SystemInfo {
	// report service
	google.protobuf.Timestamp date_version = 1;
	string main_version = 2;
	string implementation_version = 3;
}

// Run Export
message RunExportRequest {
	int32 report_id = 1;
	string filters = 2;
	string sort_by = 3;
	int32 page_size = 4;
	string page_token = 5;
	int32 report_view_id = 6;
	int32 print_format_id = 7;
	bool is_summary = 8;
	int32 record_id = 9;
	string table_name = 10;
	string format = 11;
	int32 instance_id = 12;
}
message RunExportResponse {
	int32 instance_id = 1;
	string file_name = 2;
}

// Get Report Request
message GetReportRequest {
	int32 report_id = 1;
	string filters = 2;
	string sort_by = 3;
	int32 page_size = 4;
	string page_token = 5;
	int32 report_view_id = 6;
	int32 print_format_id = 7;
	bool is_summary = 8;
	int32 record_id = 9;
	string table_name = 10;
	bool show_as_rows = 11;
	int32 instance_id = 12;
}

message Report {
	int32 id = 1;
	string name = 2;
	string description = 3;
	int32 print_format_id = 4;
	int32 report_view_id = 5;
	int64 record_count = 6;
	repeated ReportColumn columns = 7;
	repeated ReportRow rows = 8;
	string next_page_token = 9;
	int32 instance_id = 10;
	string table_name = 11;
}

message ReportColumn {
	string code = 1;
	string title = 2;
	string color = 3;
	string style = 4;
	int32 display_type = 5;
	bool is_group_column = 6;
	int32 sequence = 7;
	int32 column_width = 8;
	int32 column_characters_size = 9;
	bool is_fixed_width = 10;
	string font_code = 11;
	string column_name = 12;
	bool is_hide_grand_total = 13;
}

message ReportRow {
	google.protobuf.Struct cells = 1;
	int32 level = 2;
	repeated ReportRow children = 3;
	bool is_parent = 4;
}
